--- a/views/404.html
+++ b/views/404.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-    <title>GALERIA</title>
+    <title>ERROR</title>
   </head>
   <body>
 
@@ -19,50 +19,32 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/galeria">Galeria</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/calendario">Calendario</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/promociones">Promociones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contacto">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/iniciar-sesion">Iniciar Sesión</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-    <h1 class="display-4 center">Galeria</h1>
-
-    <div class="container">
-    	<div class="row">
-    		<div class="col-md-12">
-    		    <div class="well text-center"><h2>Terraza Don Leon</h2></div>
-    		</div>
-    	</div>
-    	<div class="container">
-      <div id="masonry">
-        <% for(var i = 1; i <= 35; i++) { %>
-        <div class="item">
-          <a href="./img/galeria/<%- i %>.png" target="_blank">
-            <img src="./img/galeria/<%- i %>.png" alt="Frame <%- i %>" />
-          </a>
-        </div>
-        <% } %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="/">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/galeria">Galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/calendario">Calendario</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/promociones">Promociones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contacto">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/iniciar-sesion">Iniciar Sesión</a>
+          </li>
+        </ul>
       </div>
-    </div>
-    </div>
+    </nav>
+    <br>
+    <h1 class="display-4 center">404</h1>
+    <h2 class="display-5 center">Uuups!! La pagina que buscas no existe.</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
