--- a/views/administrador/index.html
+++ b/views/administrador/index.html
@@ -64,15 +64,15 @@
           </tr>
         </thead>
         <tbody>
-          <% for(var i = 0; i < 15; i++) { %>
+          <!-- <% for(var i = 0; i < 15; i++) { %> -->
           <tr>
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="administrador">
             </td>
-            <td>Email #<%-i%></td>
-            <td>Usuario #<%-i%></td>
+            <td>Email</td>
+            <td>Usuario</td>
           </tr>
-          <% } %>
+          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
