--- a/views/administrador/vista.html
+++ b/views/administrador/vista.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Ver Administrador #<%-id%></h1>
+    <h1 class="display-4 center">Ver Administrador</h1>
     <br>
     <br>
 
