--- a/views/clientes/editar.html
+++ b/views/clientes/editar.html
@@ -33,7 +33,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Editar Cliente #<%-id%></h1>
+    <h1 class="display-4 center">Editar Cliente</h1>
     <br>
     <br>
 
