--- a/views/evento/editar.html
+++ b/views/evento/editar.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Editar Evento #<%-id%></h1>
+    <h1 class="display-4 center">Editar Evento</h1>
     <br>
     <br>
 
