--- a/views/evento/index.html
+++ b/views/evento/index.html
@@ -67,7 +67,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for(var i = 0; i < 15; i++) { %>
+          <!-- <% for(var i = 0; i < 15; i++) { %> -->
           <tr>
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="evento">
@@ -78,7 +78,7 @@
             <td>Apartado</td>
             <td>$500</td>
           </tr>
-          <% } %>
+          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
