--- a/views/promociones.html
+++ b/views/promociones.html
@@ -50,7 +50,7 @@
     <br>
     <section class="container">
       <div class="row">
-        <% for (var i = 0; i < 3; i++) { %>
+        <!-- <% for (var i = 0; i < 3; i++) { %> -->
         <div class="col-md">
           <div class="card" style="width: 16rem;">
             <img class="card-img-top" src="./img/panel-admin/administradores.png" alt="administradores">
@@ -66,10 +66,10 @@
             </div>
           </div>
         </div>
-        <% } %>
+        <!-- <% } %> -->
       </div>
       <div class="row">
-        <% for (var i = 0; i < 3; i++) { %>
+        <!-- <% for (var i = 0; i < 3; i++) { %> -->
         <div class="col-md">
           <div class="card" style="width: 16rem;">
             <img class="card-img-top" src="./img/panel-admin/administradores.png" alt="administradores">
@@ -85,10 +85,10 @@
             </div>
           </div>
         </div>
-        <% } %>
+        <!-- <% } %> -->
       </div>
       <div class="row">
-        <% for (var i = 0; i < 3; i++) { %>
+        <!-- <% for (var i = 0; i < 3; i++) { %> -->
         <div class="col-md">
           <div class="card" style="width: 16rem;">
             <img class="card-img-top" src="./img/panel-admin/administradores.png" alt="administradores">
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <% } %>
+        <!-- <% } %> -->
       </div>
     </section>
 
