--- a/views/proveedores/editar.html
+++ b/views/proveedores/editar.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Editar Proveedor #<%-id%></h1>
+    <h1 class="display-4 center">Editar Proveedor</h1>
     <br>
     <br>
 
