--- a/views/proveedores/index.html
+++ b/views/proveedores/index.html
@@ -67,7 +67,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for(var i = 0; i < 8; i++) { %>
+          <!-- <% for(var i = 0; i < 8; i++) { %> -->
           <tr>
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="proveedores">
@@ -78,7 +78,7 @@
             <td>Celular #<%-i%></td>
             <td>Luz y Sonido</td>
           </tr>
-          <% } %>
+          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
