--- a/views/administrador/editar.html
+++ b/views/administrador/editar.html
@@ -33,7 +33,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Editar Administrador #<%-id%></h1>
+    <h1 class="display-4 center">Editar Administrador</h1>
     <br>
     <br>
 
