--- a/views/clientes/index.html
+++ b/views/clientes/index.html
@@ -14,7 +14,7 @@
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="/panel-admin"> <img src="./img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,7 +68,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for(var i = 0; i < 15; i++) { %>
+          <!-- <% for(var i = 0; i < 15; i++) { %> -->
           <tr>
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="cliente">
