--- a/views/clientes/vista.html
+++ b/views/clientes/vista.html
@@ -33,7 +33,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Ver Cliente #<%-id%></h1>
+    <h1 class="display-4 center">Ver Cliente</h1>
     <br>
     <br>
 
@@ -82,7 +82,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for(var i = 0; i < 3; i++) { %>
+          <!-- <% for(var i = 0; i < 3; i++) { %> -->
           <tr>
             <td>27/03/2018 03:00pm</td>
             <td>Fernando Mayorga Rojas</td>
@@ -95,7 +95,7 @@
               </ul>
             </td>
           </tr>
-          <% } %>
+          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
