--- a/views/evento/vista.html
+++ b/views/evento/vista.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Ver Evento #<%-id%></h1>
+    <h1 class="display-4 center">Ver Evento</h1>
     <br>
     <br>
 
