--- a/views/galeria.html
+++ b/views/galeria.html
@@ -53,13 +53,13 @@
     	</div>
     	<div class="container">
       <div id="masonry">
-        <% for(var i = 1; i <= 35; i++) { %>
+        <!-- <% for(var i = 1; i <= 35; i++) { %> -->
         <div class="item">
           <a href="./img/galeria/<%- i %>.png" target="_blank">
             <img src="./img/galeria/<%- i %>.png" alt="Frame <%- i %>" />
           </a>
         </div>
-        <% } %>
+        <!-- <% } %> -->
       </div>
     </div>
     </div>
