--- a/views/paquetes/editar.html
+++ b/views/paquetes/editar.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Editar Paquete #<%-id%></h1>
+    <h1 class="display-4 center">Editar Paquete</h1>
     <br>
     <br>
 
