--- a/views/paquetes/index.html
+++ b/views/paquetes/index.html
@@ -66,7 +66,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for(var i = 0; i < 6; i++) { %>
+          <!-- <% for(var i = 0; i < 6; i++) { %> -->
           <tr>
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="paquetes">
@@ -76,7 +76,7 @@
             <td>20/03/2018 00:00</td>
             <td>20/05/2018 00:00</td>
           </tr>
-          <% } %>
+          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
