--- a/views/paquetes/vista.html
+++ b/views/paquetes/vista.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Ver Paquete #<%-id%></h1>
+    <h1 class="display-4 center">Ver Paquete</h1>
     <br>
     <br>
 
