--- a/views/proveedores/vista.html
+++ b/views/proveedores/vista.html
@@ -32,7 +32,7 @@
       </nav>
     <br>
 
-    <h1 class="display-4 center">Ver Proveedor #<%-id%></h1>
+    <h1 class="display-4 center">Ver Proveedor</h1>
     <br>
     <br>
 
