Se corrigieron mas errores de variables

--- a/views/clientes/index.html
+++ b/views/clientes/index.html
@@ -73,13 +73,13 @@
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="cliente">
             </td>
-            <td>Nombre #<%-i%></td>
-            <td>Paterno #<%-i%></td>
-            <td>Materno #<%-i%></td>
-            <td>Celular #<%-i%></td>
-            <td><%- (i%5)+1 %></td>
+            <td>Nombre</td>
+            <td>Paterno</td>
+            <td>Materno</td>
+            <td>Celular</td>
+            <td></td>
           </tr>
-          <% } %>
+          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
