--- a/views/paquetes/index.html
+++ b/views/paquetes/index.html
@@ -71,7 +71,7 @@
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="paquetes">
             </td>
-            <td>Paquete #<%-i%></td>
+            <td>Paquete</td>
             <td>$250</td>
             <td>20/03/2018 00:00</td>
             <td>20/05/2018 00:00</td>
