--- a/views/proveedores/index.html
+++ b/views/proveedores/index.html
@@ -72,10 +72,10 @@
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="proveedores">
             </td>
-            <td>Nombre #<%-i%></td>
-            <td>Paterno #<%-i%></td>
-            <td>Materno #<%-i%></td>
-            <td>Celular #<%-i%></td>
+            <td>Nombre</td>
+            <td>Paterno</td>
+            <td>Materno</td>
+            <td>Celular</td>
             <td>Luz y Sonido</td>
           </tr>
           <!-- <% } %> -->
