Se trabajo en resolver los problemas de vistas de html

--- a/views/index.html
+++ b/views/index.html
@@ -7,14 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
     <title>INICIO</title>
   </head>
   <body>
 
     <br><br>
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="/">TDL</a>
+  <a class="navbar-brand" href="./index.html">TDL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,22 +21,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-              <a class="nav-link" href="/">Inicio</a>
+              <a class="nav-link" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/galeria">Galeria</a>
+            <a class="nav-link" href="./galeria.html">Galeria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/calendario">Calendario</a>
+            <a class="nav-link" href="./calendario.html">Calendario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/promociones">Promociones</a>
+            <a class="nav-link" href="./promociones.html">Promociones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacto">Contacto</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/iniciar-sesion">Iniciar Sesión</a>
+            <a class="nav-link" href="./iniciar-sesion.html">Iniciar Sesión</a>
           </li>
         </ul>
       </div>
@@ -45,7 +44,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Bienvenido</h1>
+    <h1 class="display-4 text-center">Bienvenido</h1>
 
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -57,19 +56,19 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src=".\img\roll-1.jpg" alt="First slide">
+            <img class="d-block w-100" src="..\img\roll-1.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src=".\img\roll-2.jpg" alt="Second slide">
+            <img class="d-block w-100" src="..\img\roll-2.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src=".\img\roll-3.jpg" alt="Third slide">
+            <img class="d-block w-100" src="..\img\roll-3.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src=".\img\roll-4.jpg" alt="Fourth slide">
+            <img class="d-block w-100" src="..\img\roll-4.jpg" alt="Fourth slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src=".\img\roll-5.jpg" alt="Fifth slide">
+            <img class="d-block w-100" src="..\img\roll-5.jpg" alt="Fifth slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -84,7 +83,7 @@
 
 
     <section class="container">
-      <h2 class="display-4 center">Nosotros</h1>
+      <h2 class="display-4 text-center">Nosotros</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
       </p>
@@ -93,7 +92,7 @@
     <div class="static-background" id="static-1"></div>
 
     <section class="container">
-      <h2 class="display-4 center">Historia</h1>
+      <h2 class="display-4 text-center">Historia</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
       </p>
@@ -102,7 +101,7 @@
     <div class="static-background" id="static-2"></div>
 
     <section class="container">
-      <h2 class="display-4 center">Eventos</h1>
+      <h2 class="display-4 text-center">Eventos</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
       </p>
