--- a/views/administrador/clientes/index.html
+++ b/views/administrador/clientes/index.html
@@ -7,14 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
     <title>CLIENTES</title>
   </head>
   <body>
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="./img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="/panel-admin"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/panel-admin">Regresar a panel</a>
+                <a class="nav-link" href="../panel-admin.html">Regresar a panel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Cerrar Sesión</a>
+              <a class="nav-link" href="../home.html">Cerrar Sesión</a>
             </li>
           </ul>
         </div>
@@ -33,7 +32,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Lista De Clientes</h1>
+    <h1 class="display-4 text-center">Lista De Clientes</h1>
     <br>
     <br>
 
@@ -56,7 +55,7 @@
       </div>
       <br>
 
-      <table class="table table-striped">
+      <table class="table table-striped text-center">
         <thead>
           <tr>
             <th scope="col"></th>
@@ -68,7 +67,6 @@
           </tr>
         </thead>
         <tbody>
-          <!-- <% for(var i = 0; i < 15; i++) { %> -->
           <tr>
             <td>
               <input type="checkbox" name="selected" value="<%-i%>" data-type="cliente">
@@ -79,7 +77,6 @@
             <td>Celular</td>
             <td></td>
           </tr>
-          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
@@ -91,6 +88,6 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Optional JavaScript -->
-    <script src="../js/lista.js" type="text/javascript"></script>
+    <script src="../../js/lista.js" type="text/javascript"></script>
   </body>
 </html>
