--- a/views/administrador/crear.html
+++ b/views/administrador/crear.html
@@ -7,14 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
     <title>CIENTES/VISTA</title>
   </head>
   <body>
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="/panel-admin"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/panel-admin">Regresar a panel</a>
+                <a class="nav-link" href="../panel-admin.html">Regresar a panel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Cerrar Sesión</a>
+              <a class="nav-link" href="../index.html">Cerrar Sesión</a>
             </li>
           </ul>
         </div>
@@ -33,7 +32,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Ver Cliente</h1>
+    <h1 class="display-4 text-center">Ver Cliente</h1>
     <br>
     <br>
 
@@ -66,7 +65,7 @@
       </form>
     </section>
 
-    <h2 class="display-5 center">Eventos del cliente</h1>
+    <h2 class="display-5 text-center">Eventos del cliente</h1>
     <br>
 
     <section class="container">
@@ -82,7 +81,6 @@
           </tr>
         </thead>
         <tbody>
-          <!-- <% for(var i = 0; i < 3; i++) { %> -->
           <tr>
             <td>27/03/2018 03:00pm</td>
             <td>Fernando Mayorga Rojas</td>
@@ -95,7 +93,6 @@
               </ul>
             </td>
           </tr>
-          <!-- <% } %> -->
         </tbody>
       </table>
     </section>
