--- a/views/contacto.html
+++ b/views/contacto.html
@@ -7,14 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
     <title>CONTACTO</title>
   </head>
   <body>
 
     <br><br>
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="/">TDL</a>
+  <a class="navbar-brand" href="./index.html">TDL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,29 +21,29 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/">Inicio</a>
+                <a class="nav-link" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/galeria">Galeria</a>
+              <a class="nav-link" href="./galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/calendario">Calendario</a>
+              <a class="nav-link" href="./calendario.html">Calendario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/promociones">Promociones</a>
+              <a class="nav-link" href="./promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contacto">Contacto</a>
+              <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iniciar-sesion">Iniciar Sesión</a>
+              <a class="nav-link" href="./iniciar-sesion.html">Iniciar Sesión</a>
             </li>
           </ul>
         </div>
       </nav>
     <br>
 
-    <h1 class="display-4 center">Contactanos</h1>
+    <h1 class="display-4 text-center">Contactanos</h1>
 
     <section class="container">
       <h2> No dudes en contactarnos.</h2>
