--- a/views/galeria.html
+++ b/views/galeria.html
@@ -7,14 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
     <title>GALERIA</title>
   </head>
   <body>
 
     <br><br>
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="/">TDL</a>
+  <a class="navbar-brand" href="./index.html">TDL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,28 +21,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/">Inicio</a>
+                <a class="nav-link" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/galeria">Galeria</a>
+              <a class="nav-link" href="./galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/calendario">Calendario</a>
+              <a class="nav-link" href="./calendario.html">Calendario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/promociones">Promociones</a>
+              <a class="nav-link" href="./promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contacto">Contacto</a>
+              <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iniciar-sesion">Iniciar Sesión</a>
+              <a class="nav-link" href="./iniciar-sesion.html">Iniciar Sesión</a>
             </li>
           </ul>
         </div>
       </nav>
 
-    <h1 class="display-4 center">Galeria</h1>
+    <h1 class="display-4 text-center">Galeria</h1>
 
     <div class="container">
     	<div class="row">
@@ -53,13 +52,11 @@
     	</div>
     	<div class="container">
       <div id="masonry">
-        <!-- <% for(var i = 1; i <= 35; i++) { %> -->
         <div class="item">
-          <a href="./img/galeria/<%- i %>.png" target="_blank">
-            <img src="./img/galeria/<%- i %>.png" alt="Frame <%- i %>" />
+          <a href="../img/galeria/1.png" target="_blank">
+            <img src="../img/galeria/2.png" />
           </a>
         </div>
-        <!-- <% } %> -->
       </div>
     </div>
     </div>
