--- a/views/promociones.html
+++ b/views/promociones.html
@@ -14,7 +14,7 @@
 
     <br><br>
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="/">TDL</a>
+  <a class="navbar-brand" href="./index.html">TDL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,22 +22,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/">Inicio</a>
+                <a class="nav-link" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/galeria">Galeria</a>
+              <a class="nav-link" href="./galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/calendario">Calendario</a>
+              <a class="nav-link" href="./calendario.html">Calendario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/promociones">Promociones</a>
+              <a class="nav-link" href="./promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contacto">Contacto</a>
+              <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iniciar-sesion">Iniciar Sesión</a>
+              <a class="nav-link" href="./iniciar-sesion.html">Iniciar Sesión</a>
             </li>
           </ul>
         </div>
@@ -45,15 +45,14 @@
 
     <br>
 
-    <h1 class="display-4 center">Panel De Control</h1>
+    <h1 class="display-4 text-center">Panel De Control</h1>
     <br>
     <br>
     <section class="container">
       <div class="row">
-        <!-- <% for (var i = 0; i < 3; i++) { %> -->
         <div class="col-md">
           <div class="card" style="width: 16rem;">
-            <img class="card-img-top" src="./img/panel-admin/administradores.png" alt="administradores">
+            <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
             <div class="card-body">
               <h5 class="card-title">Promo Mi Boda</h5>
               <p class="card-text">
@@ -66,13 +65,11 @@
             </div>
           </div>
         </div>
-        <!-- <% } %> -->
       </div>
       <div class="row">
-        <!-- <% for (var i = 0; i < 3; i++) { %> -->
         <div class="col-md">
           <div class="card" style="width: 16rem;">
-            <img class="card-img-top" src="./img/panel-admin/administradores.png" alt="administradores">
+            <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
             <div class="card-body">
               <h5 class="card-title">Promo Mi Boda</h5>
               <p class="card-text">
@@ -85,13 +82,11 @@
             </div>
           </div>
         </div>
-        <!-- <% } %> -->
       </div>
       <div class="row">
-        <!-- <% for (var i = 0; i < 3; i++) { %> -->
         <div class="col-md">
           <div class="card" style="width: 16rem;">
-            <img class="card-img-top" src="./img/panel-admin/administradores.png" alt="administradores">
+            <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
             <div class="card-body">
               <h5 class="card-title">Promo Mi Boda</h5>
               <p class="card-text">
@@ -104,7 +99,6 @@
             </div>
           </div>
         </div>
-        <!-- <% } %> -->
       </div>
     </section>
 
