--- a/views/administrador/clientes/crear.html
+++ b/views/administrador/clientes/crear.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
     <title>CIENTES/CREAR</title>
@@ -16,7 +15,7 @@
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/panel-admin">Regresar a panel</a>
+                <a class="nav-link" href="../../panel-admin.html">Regresar a panel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Cerrar Sesión</a>
+              <a class="nav-link" href="../../index.html">Cerrar Sesión</a>
             </li>
           </ul>
         </div>
@@ -35,7 +34,7 @@
 
     <br>
 
-    <h1 class="display-4 center">Crear Cliente</h1>
+    <h1 class="display-4 text-center">Crear Cliente</h1>
     <br>
     <br>
 
