--- a/views/administrador/crear.html
+++ b/views/administrador/crear.html
@@ -13,7 +13,7 @@
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="../panel-admin.html"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
