--- a/views/administrador/evento/index.html
+++ b/views/administrador/evento/index.html
@@ -14,7 +14,7 @@
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,17 +22,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/panel-admin">Regresar a panel</a>
+                <a class="nav-link" href="../../panel-admin.html">Regresar a panel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Cerrar Sesión</a>
+              <a class="nav-link" href="../../index.html">Cerrar Sesión</a>
             </li>
           </ul>
         </div>
       </nav>
     <br>
 
-    <h1 class="display-4 center">Lista De Evento</h1>
+    <h1 class="display-4 text-center">Lista De Evento</h1>
     <br>
     <br>
 
