--- a/views/admin/administrador/index.html
+++ b/views/admin/administrador/index.html
@@ -81,6 +81,6 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Optional JavaScript -->
-    <script src="../js/lista.js" type="text/javascript"></script>
+    <script src="../../../js/views/admin/administrador/index.js" type="text/javascript"></script>
   </body>
 </html>
