Se corrigieron errores en promociones.html

--- a/views/promociones.html
+++ b/views/promociones.html
@@ -7,8 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
-    <title>PANEL DE CONTROL</title>
+    <title>PROMOCIONES</title>
   </head>
   <body>
 
@@ -45,62 +44,58 @@
 
     <br>
 
-    <h1 class="display-4 text-center">Panel De Control</h1>
+    <h1 class="display-4 text-center">Promociones</h1>
     <br>
     <br>
-    <section class="container">
-      <div class="row">
-        <div class="col-md">
-          <div class="card" style="width: 16rem;">
-            <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
-            <div class="card-body">
-              <h5 class="card-title">Promo Mi Boda</h5>
-              <p class="card-text">
-                50 Mesas <br>
-                400 Sillas <br>
-                400 Platillos <br>
-                400 Postres
-              </p>
-              <a href="#" class="btn btn-success">$20,000</a>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <div class="card" style="width: 16rem;">
+              <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
+              <div class="card-body">
+                <h5 class="card-title">Promo Mi Boda</h5>
+                <p class="card-text">
+                  50 Mesas <br>
+                  400 Sillas <br>
+                  400 Platillos <br>
+                  400 Postres
+                </p>
+                <a href="#" class="btn btn-success">$20,000</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card" style="width: 16rem;">
+              <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
+              <div class="card-body">
+                <h5 class="card-title">Promo Mi Boda</h5>
+                <p class="card-text">
+                  50 Mesas <br>
+                  400 Sillas <br>
+                  400 Platillos <br>
+                  400 Postres
+                </p>
+                <a href="#" class="btn btn-success">$20,000</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card" style="width: 16rem;">
+              <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
+              <div class="card-body">
+                <h5 class="card-title">Promo Mi Boda</h5>
+                <p class="card-text">
+                  50 Mesas <br>
+                  400 Sillas <br>
+                  400 Platillos <br>
+                  400 Postres
+                </p>
+                <a href="#" class="btn btn-success">$20,000</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md">
-          <div class="card" style="width: 16rem;">
-            <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
-            <div class="card-body">
-              <h5 class="card-title">Promo Mi Boda</h5>
-              <p class="card-text">
-                50 Mesas <br>
-                400 Sillas <br>
-                400 Platillos <br>
-                400 Postres
-              </p>
-              <a href="#" class="btn btn-success">$20,000</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md">
-          <div class="card" style="width: 16rem;">
-            <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
-            <div class="card-body">
-              <h5 class="card-title">Promo Mi Boda</h5>
-              <p class="card-text">
-                50 Mesas <br>
-                400 Sillas <br>
-                400 Platillos <br>
-                400 Postres
-              </p>
-              <a href="#" class="btn btn-success">$20,000</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
