Se hicieron los ajustes en panel-admin.html

--- a/views/panel-admin.html
+++ b/views/panel-admin.html
@@ -13,7 +13,7 @@
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/panel-admin"> <img src="../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="./panel-admin.html"> <img src="../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,7 +40,7 @@
             <div class="card-body">
               <h5 class="card-title">Administrador</h5>
               <p class="card-text">Un administrador es un usuario con acceso a el panel de control.</p>
-              <a href="/administrador-inicio" class="btn btn-primary">Lista</a>
+              <a href="./admin/administrador/index.html" class="btn btn-primary">Lista</a>
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="card-body">
               <h5 class="card-title">Clientes</h5>
               <p class="card-text">Los clientes que han tenido o van a tener un evento.</p>
-              <a href="/cliente-inicio" class="btn btn-primary">Lista</a>
+              <a href="./admin/clientes/index.html" class="btn btn-primary">Lista</a>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
             <div class="card-body">
               <h5 class="card-title">Eventos</h5>
               <p class="card-text">Todos los eventos que se han hecho o van a hacer.</p>
-              <a href="/evento-inicio" class="btn btn-primary">Lista</a>
+              <a href="./admin/evento/index.html" class="btn btn-primary">Lista</a>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="card-body">
               <h5 class="card-title">Paquetes</h5>
               <p class="card-text">Todas las promociones existentes de la terraza.</p>
-              <a href="/paquetes-inicio" class="btn btn-primary">Lista</a>
+              <a href="./admin/paquetes/index.html" class="btn btn-primary">Lista</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="card-body">
               <h5 class="card-title">Proveedores</h5>
               <p class="card-text">Proveedores externos a la terraza don leon.</p>
-              <a href="/proveedores-inicio" class="btn btn-primary">Lista</a>
+              <a href="./admin/proveedores/index.html" class="btn btn-primary">Lista</a>
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="card-body">
               <h5 class="card-title">Calendario</h5>
               <p class="card-text">Es un calendario donde marca los dias ocupado y libres del mes.</p>
-              <a href="/calendario-admin" class="btn btn-primary">Ver</a>
+              <a href="./admin/calendario/index.html" class="btn btn-primary">Ver</a>
             </div>
           </div>
         </div>
