--- a/views/admin/administrador/crear.html
+++ b/views/admin/administrador/crear.html
@@ -7,13 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>CIENTES/VISTA</title>
+    <title>ADMIN/CREAR</title>
   </head>
   <body>
 
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="../panel-admin.html"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="../panel-admin.html">Regresar a panel</a>
+                <a class="nav-link" href="../../panel-admin.html">Regresar a panel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Cerrar Sesión</a>
+              <a class="nav-link" href="../../index.html">Cerrar Sesión</a>
             </li>
           </ul>
         </div>
@@ -32,71 +32,28 @@
 
     <br>
 
-    <h1 class="display-4 text-center">Ver Cliente</h1>
+    <h1 class="display-4 text-center">Crear Administrador </h1>
     <br>
     <br>
 
     <section class="container">
-      <form>
+      <form novalidate>
         <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" value="fernando@gmail.com" readonly="true">
+          <label for="email">Email: <span class="req">*</span></label>
+          <input type="email" class="form-control" id="email" placeholder="fernando@gmail.com" data-type="email" required>
         </div>
         <div class="form-group">
-          <label for="nombre">Nombre:</label>
-          <input type="text" class="form-control" id="nombre" value="Fernando" readonly="true">
+          <label for="nombre">Nombre: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="nombre-usuario" placeholder="Fernando" required>
         </div>
         <div class="form-group">
-          <label for="ap-paterno">Apellido Paterno:</label>
-          <input type="text" class="form-control" id="ap-paterno" value="Mayorga" readonly="true">
+          <label for="ap-paterno">Contraseña: <span class="req">*</span></label>
+          <input type="password" class="form-control" id="contrasena" placeholder="******" required>
         </div>
-        <div class="form-group">
-          <label for="ap-materno">Apellido Materno:</label>
-          <input type="text" class="form-control" id="ap-materno" value="Rojas" readonly="true">
-        </div>
-        <div class="form-group">
-          <label for="tel-cel">Tel. Celular:</label>
-          <input type="text" class="form-control" id="tel-cel" value="3398787646" readonly="true">
-        </div>
-        <div class="form-group">
-          <label for="tel-fijo">Tel. Fijo:</label>
-          <input type="text" class="form-control" id="tel-fijo" value="36297665" readonly="true">
-        </div>
+        <button type="submit" class="btn btn-primary">Crear</button>
       </form>
+
     </section>
-
-    <h2 class="display-5 text-center">Eventos del cliente</h1>
-    <br>
-
-    <section class="container">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Fecha</th>
-            <th scope="col">Cliente</th>
-            <th scope="col">Costo total</th>
-            <th scope="col">Estatus</th>
-            <th scope="col">Anticipo</th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>27/03/2018 03:00pm</td>
-            <td>Fernando Mayorga Rojas</td>
-            <td>$1500</td>
-            <td>Apartado</td>
-            <td>$500</td>
-            <td>
-              <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="/evento-vista/<%- i %>"><img src="../img/iconos/eye-2x.png" alt=""></a></li>
-              </ul>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
