Se añadio la tabla de paquetes a lista de evento y se solucionaron errores generales

--- a/views/admin/evento/vista.html
+++ b/views/admin/evento/vista.html
@@ -96,6 +96,36 @@
         </div>
       </form>
     </section>
+
+    <h2 class="display-5 text-center">Paquetes</h1>
+    <br>
+
+    <section class="container">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Numero de paquete</th>
+            <th scope="col">Costo</th>
+            <th scope="col">Fecha y hora de inicio</th>
+            <th scope="col">Fecha y hora de fin</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>3</td>
+            <td>$20,000</td>
+            <td>27/03/2018 03:00pm</td>
+            <td>27/03/2018 09:00pm</td>
+            <td>
+              <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="../paquetes/index.html"><img src="../../../img/iconos/eye-2x.png" alt=""></a></li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
     <br><br><br><br>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
