--- a/views/admin/administrador/index.html
+++ b/views/admin/administrador/index.html
@@ -13,7 +13,7 @@
 
     <br><br>
         <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="../panel-admin.html"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
+        <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="../panel-admin.html">Regresar a panel</a>
+                  <a class="nav-link" href="../../panel-admin.html">Regresar a panel</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../index.html">Cerrar Sesión</a>
+                <a class="nav-link" href="../../index.html">Cerrar Sesión</a>
               </li>
             </ul>
           </div>
