--- a/views/galeria.html
+++ b/views/galeria.html
@@ -7,6 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> -->
+    <!-- <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/vendor/normalize.css"> -->
+    <link rel="stylesheet" href="../css/main.css">
     <title>GALERIA</title>
   </head>
   <body>
@@ -44,13 +49,132 @@
 
     <h1 class="display-4 text-center">Galeria</h1>
 
-    <div class="container">
+    <!-- <div class="container"> -->
     	<div class="row">
     		<div class="col-md-12">
     		    <div class="well text-center"><h2>Terraza Don Leon</h2></div>
     		</div>
     	</div>
-    	<div class="container">
+
+      <div class="container">
+	<div class="row"><!--
+
+Photos from unsplash.com
+
+Follow me on
+Dribbble: https://dribbble.com/supahfunk
+Twitter: https://twitter.com/supahfunk
+Codepen: https://codepen.io/supah/
+
+-->
+<div class="gal">
+  <figure>
+    <img src="../img/galeria/1.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/2.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/3.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/4.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/5.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/6.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/7.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/8.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/9.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/10.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/11.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/12.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/13.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/14.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/15.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/16.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/17.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/18.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/19.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/20.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/21.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/22.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/23.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/24.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/25.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/26.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/27.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/28.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/29.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/30.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/31.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/32.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/33.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/34.png" alt="" />
+  </figure>
+  <figure>
+    <img src="../img/galeria/35.png" alt="" />
+  </figure>
+</div>
+    	<!-- <div class="container">
       <div id="masonry">
         <div class="item">
           <a href="../img/galeria/1.png" target="_blank">
@@ -58,8 +182,47 @@
           </a>
         </div>
       </div>
-    </div>
-    </div>
+    </div> -->
+
+    <!-- <div class="row">
+  <div class="column">
+    <img src="../img/galeria/1.png">
+    <img src="../img/galeria/2.png">
+    <img src="../img/galeria/3.png">
+    <img src="../img/galeria/4.png">
+    <img src="../img/galeria/5.png">
+    <img src="../img/galeria/6.png">
+    <img src="../img/galeria/7.png">
+  </div>
+  <div class="column">
+    <img src="../img/galeria/8.png">
+    <img src="../img/galeria/9.png">
+    <img src="../img/galeria/10.png">
+    <img src="../img/galeria/11.png">
+    <img src="../img/galeria/12.png">
+    <img src="../img/galeria/13.png">
+  </div>
+  </div> -->
+  <!-- <div class="column">
+    <img src="wedding.jpg">
+    <img src="rocks.jpg">
+    <img src="falls2.jpg">
+    <img src="paris.jpg">
+    <img src="nature.jpg">
+    <img src="mist.jpg">
+    <img src="paris.jpg">
+  </div>
+  <div class="column">
+    <img src="underwater.jpg">
+    <img src="ocean.jpg">
+    <img src="wedding.jpg">
+    <img src="mountainskies.jpg">
+    <img src="rocks.jpg">
+    <img src="underwater.jpg">
+  </div> -->
+<!-- </div> -->
+
+    <!-- </div> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
