Se limpio el html de galeria y se creo la estructura correcta de las carpetas y archivos para los js de cada vista

--- a/views/galeria.html
+++ b/views/galeria.html
@@ -57,16 +57,7 @@
     	</div>
 
       <div class="container">
-	<div class="row"><!--
-
-Photos from unsplash.com
-
-Follow me on
-Dribbble: https://dribbble.com/supahfunk
-Twitter: https://twitter.com/supahfunk
-Codepen: https://codepen.io/supah/
-
--->
+	<div class="row">
 <div class="gal">
   <figure>
     <img src="../img/galeria/1.png" alt="" />
@@ -174,58 +165,6 @@ Codepen: https://codepen.io/supah/
     <img src="../img/galeria/35.png" alt="" />
   </figure>
 </div>
-    	<!-- <div class="container">
-      <div id="masonry">
-        <div class="item">
-          <a href="../img/galeria/1.png" target="_blank">
-            <img src="../img/galeria/2.png" />
-          </a>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- <div class="row">
-  <div class="column">
-    <img src="../img/galeria/1.png">
-    <img src="../img/galeria/2.png">
-    <img src="../img/galeria/3.png">
-    <img src="../img/galeria/4.png">
-    <img src="../img/galeria/5.png">
-    <img src="../img/galeria/6.png">
-    <img src="../img/galeria/7.png">
-  </div>
-  <div class="column">
-    <img src="../img/galeria/8.png">
-    <img src="../img/galeria/9.png">
-    <img src="../img/galeria/10.png">
-    <img src="../img/galeria/11.png">
-    <img src="../img/galeria/12.png">
-    <img src="../img/galeria/13.png">
-  </div>
-  </div> -->
-  <!-- <div class="column">
-    <img src="wedding.jpg">
-    <img src="rocks.jpg">
-    <img src="falls2.jpg">
-    <img src="paris.jpg">
-    <img src="nature.jpg">
-    <img src="mist.jpg">
-    <img src="paris.jpg">
-  </div>
-  <div class="column">
-    <img src="underwater.jpg">
-    <img src="ocean.jpg">
-    <img src="wedding.jpg">
-    <img src="mountainskies.jpg">
-    <img src="rocks.jpg">
-    <img src="underwater.jpg">
-  </div> -->
-<!-- </div> -->
-
-    <!-- </div> -->
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
