--- a/views/admin/clientes/crear.html
+++ b/views/admin/clientes/crear.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>CLIENTES/CREAR</title>
   </head>
   <body>
@@ -42,39 +42,42 @@
       <form novalidate>
         <div class="form-group">
           <label for="email">Email: <span class="req">*</span></label>
-          <input type="email" class="form-control" id="email" placeholder="fernando@gmail.com" data-type="email" required>
+          <input type="email" class="form-control" id="email" placeholder="fernando@gmail.com" data-type="correo">
         </div>
         <div class="form-group">
-          <label for="nombre">Nombre: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="nombre" placeholder="Fernando" required>
+          <label for="nombre">Nombre(s): <span class="req">*</span></label>
+          <input type="text" class="form-control" id="name" placeholder="Fernando" data-type="nombre">
         </div>
         <div class="form-group">
-          <label for="ap-paterno">Apellido Paterno: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="ap-paterno" placeholder="Mayorga" required>
-        </div>
-        <div class="form-group">
-          <label for="ap-materno">Apellido Materno: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="ap-materno" placeholder="Rojas" required>
+          <label for="ap-paterno">Apellido(s): <span class="req">*</span></label>
+          <input type="text" class="form-control" id="last_name" placeholder="Mayorga" data-type="nombre">
         </div>
         <div class="form-group">
           <label for="tel-cel">Tel. Celular: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="tel-cel" placeholder="3398787646" data-type="phoneNumber" required>
+          <input type="text" class="form-control" id="phone" placeholder="3398787646" data-type="numero">
         </div>
         <div class="form-group">
-          <label for="tel-fijo">Tel. Fijo: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="tel-fijo" placeholder="36297665" data-type="phoneNumber" required>
+          <label for="tel-fijo">Puntuación: <span class="req">*</span></label>
+          <input type="number" class="form-control" id="score" placeholder="0" data-type="numero">
         </div>
-        <button type="submit" class="btn btn-primary">Crear</button>
+        <div class="form-group">
+          <label for="tel-cel">Comentario: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="comment" placeholder="Comentario del cliente" data-type="nombre">
+        </div>
+        <button type="button"  id="submit" class="btn btn-primary">Crear</button>
       </form>
 
     </section>
 
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <!-- Optional JavaScript -->
-    <script src="../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+    <script src="../../../js/md5.min.js" type="text/javascript"></script>
+    <script src="../../../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/views/admin/clientes/crear.js" type="text/javascript"></script>
   </body>
 </html>
