--- a/views/admin/clientes/index.html
+++ b/views/admin/clientes/index.html
@@ -55,29 +55,18 @@
       </div>
       <br>
 
-      <table class="table table-striped text-center">
+      <table id="tabla" class="table table-striped text-center">
         <thead>
           <tr>
             <th scope="col"></th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Apellido Paterno</th>
-            <th scope="col">Apellido Materno</th>
-            <th scope="col">Celular</th>
+            <th scope="col">Nombre(s)</th>
+            <th scope="col">Apellido(s)</th>
+            <th scope="col">Email</th>
+            <th scope="col">Telefono</th>
             <th scope="col">Calificación</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>
-              <input type="checkbox" name="selected" value="<%-i%>" data-type="cliente">
-            </td>
-            <td>Nombre</td>
-            <td>Paterno</td>
-            <td>Materno</td>
-            <td>Celular</td>
-            <td></td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
 
@@ -88,6 +77,14 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Optional JavaScript -->
-    <script src="../../js/lista.js" type="text/javascript"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+    <script src="../../../js/md5.min.js" type="text/javascript"></script>
+    <script src="../../../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/views/admin/clientes/index.js" type="text/javascript"></script>
   </body>
 </html>
