Los clientes ya pueden ver sus eventos.

--- a/views/admin/clientes/vista.html
+++ b/views/admin/clientes/vista.html
@@ -69,31 +69,16 @@
     <br>
 
     <section class="container">
-      <table class="table table-striped">
+      <table id="tabla" class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Fecha</th>
-            <th scope="col">Cliente</th>
-            <th scope="col">Costo total</th>
-            <th scope="col">Estatus</th>
-            <th scope="col">Anticipo</th>
             <th scope="col"></th>
+            <th scope="col">Fecha Inicio</th>
+            <th scope="col">Fecha Fin</th>
+            <th scope="col">Personas</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>27/03/2018 03:00pm</td>
-            <td>Fernando Mayorga Rojas</td>
-            <td>$1500</td>
-            <td>Apartado</td>
-            <td>$500</td>
-            <td>
-              <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="/evento-vista/<%- i %>"><img src="../img/iconos/eye-2x.png" alt=""></a></li>
-              </ul>
-            </td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
 
